--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,15 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   pinput: ^5.0.0
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.16.0
-  card_slider: ^1.0.5  
-  image_picker: ^1.1.2
-  path_provider: ^2.1.4
-  path: ^1.9.0
-  permission_handler: ^11.3.1
-  intl: ^0.19.0
-  lottie: ^3.1.2
+  font_awesome_flutter: ^10.7.0
+  
 
 
 dev_dependencies:
