--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,14 @@ dependencies:
   google_fonts: ^6.2.1
   pinput: ^5.0.0
   font_awesome_flutter: ^10.7.0
-  im_stepper: ^1.0.1+1
+  intl: ^0.17.0
+  dropdown_button2: ^2.3.9
+  file_picker: ^8.1.2
+  image_picker: ^1.1.2
+  permission_handler: ^11.3.1
+  path: ^1.9.0
+  path_provider: ^2.1.4
+  
   
 
 
